--- a/Saitemp/app/src/main/res/layout/activity_main.xml
+++ b/Saitemp/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Usuario"
+                        android:inputType="textEmailAddress"
                         app:startIconDrawable="@drawable/user" />
                 </com.google.android.material.textfield.TextInputLayout>
 
