--- a/Saitemp/app/src/main/res/layout/asistentes.xml
+++ b/Saitemp/app/src/main/res/layout/asistentes.xml
@@ -42,7 +42,8 @@
             android:id="@+id/tie_correo_asistente"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Correo" />
+            android:hint="Correo"
+            android:inputType="textEmailAddress" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
